--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,14 @@ server.port=8080
 
 # Actual DB configurations, uncomment to connect with release DB
 spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/test
-spring.datasource.username = 
+spring.datasource.username = root
 spring.datasource.password = 
 
 ## Hibernate Properties
 spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # to avoid feature not found exception
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
