--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
 # Actual DB configurations, uncomment to connect with release DB
-spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/test
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3308/attendance
 spring.datasource.username = root
 spring.datasource.password = 
 
