--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port=8080
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
 # Actual DB configurations, uncomment to connect with release DB
-spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3308/attendance
-spring.datasource.username = root
-spring.datasource.password = 
+#spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3308/attendance
+#spring.datasource.username = root
+#spring.datasource.password = 
 
 ## Hibernate Properties
 spring.jpa.show-sql=true
