--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>13.0.2</java.version>
+		<!-- <java.version>13.0.2</java.version> -->
+		<java.version>10.0.2</java.version>
 	</properties>
 
 	<dependencies>
@@ -56,12 +57,12 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-devtools</artifactId>
 		    <scope>runtime</scope>
 		</dependency>
-		
+ -->		
 	</dependencies>
 
 	<build>
