date correction:deploy

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<!-- <java.version>13.0.2</java.version> -->
+		<!-- deploy: java version -->
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -35,6 +37,14 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- deploy: postgres -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -56,12 +66,11 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-		<dependency>
+ 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-devtools</artifactId>
 		    <scope>runtime</scope>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
