--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 # Configure the server to run on port 8080
-server.port=8080
+server.port=443
+server.ssl.enabled=true
+server.ssl.key-store: src/main/resources/bootsecurity.p12
+server.ssl.key-store-password: adss2020
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: bootsecurity
 
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
