--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
 # Configure the server to run on port 8080
-server.port=443
-server.ssl.enabled=true
-server.ssl.key-store: src/main/resources/bootsecurity.p12
-server.ssl.key-store-password: adss2020
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: bootsecurity
+server.port=8080
 
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
 # Actual DB configurations, uncomment to connect with release DB
-#spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3308/attendance
-#spring.datasource.username = root
-#spring.datasource.password = 
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3308/attendance
+spring.datasource.username = root
+spring.datasource.password = 
 
 ## Hibernate Properties
 spring.jpa.show-sql=true
@@ -22,3 +17,4 @@ spring.jpa.hibernate.ddl-auto = update
 
 # to avoid feature not found exception
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
