--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,13 @@
 		    <artifactId>spring-boot-devtools</artifactId>
 		    <scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>4.1.3.RELEASE</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
