--- a/deploy/application.properties
+++ b/deploy/application.properties
@@ -11,6 +11,8 @@ server.port=8080
 #spring.datasource.username = root
 #spring.datasource.password = 
 
+server.error.whitelabel.enabled=false
+
 ## Hibernate Properties
 spring.jpa.show-sql=true
 
