--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # Configure the server to run on port 8080
 server.port=8080
 
-# server.tomcat.remote-ip-header=x-forwarded-for
-# server.tomcat.protocol-header=x-forwarded-proto
+server.error.whitelabel.enabled=false
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
