--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		 -->
+		
 		<!-- deploy: postgres -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
