--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ server.error.whitelabel.enabled=false
 # spring.datasource.username = root
 # spring.datasource.password = 
 
+#       before deploy comment out above 3 lines
+
+
 ## Hibernate Properties
 spring.jpa.show-sql=true
 
