--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.error.whitelabel.enabled=false
 spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # to avoid feature not found exception
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
