--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.jpa.hibernate.ddl-auto = update
 # to avoid feature not found exception
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+group2020.app.jwtSecret= fp2020SecretKey
+group2020.app.jwtExpirationMs= 86400000
